# SynapseTrader

./: .gitignore  README.md  agent.py  api_service.py  app.py  firebolt_client.py  main.py  pyproject.toml  requirements.txt  start_backend.py  test_implementation.py  tools.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedAudioRecorder.tsx  AnimatedBackground.tsx  AnimatedMessageBubble.tsx  Conversation.tsx  EnhancedConversation.tsx  MessageBubble.tsx  TradingHeader.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/services/: api.ts
frontend/src/theme/: tradingTheme.ts
frontend/src/types/: conversation.ts
synapse_trader/: .gitignore  agent.py
synapse_trader/data/: wrds_swap_data.csv
