[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse_trader"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "An AI-powered trading co-pilot"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.32.0",
    "anthropic>=0.8.1",
    "elevenlabs>=0.3.0",
    "aci-dev>=1.0.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "SpeechRecognition>=3.10.0",
    "PyAudio>=0.2.14"
]

[tool.setuptools]
packages = ["synapse_trader"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
synapse_trader = [
    "data/*.csv",
    "assets/*",
    "audio_outputs/.gitkeep"
]